@@ -22,6 +22,7 @@
        up to the error. (Stefan)
 - NEW: url handler for TSVN commands. See issue #440 for details. (Stefan)
 - NEW: column showing the file sizes in the status list control. (Stefan)
+- NEW: Command to repair copies. (Stefan)
 
 Version 1.6.4
 - CHG: Improved startup performance of the log cache. (Stefan)
